--- a/src/locale/ar.json
+++ b/src/locale/ar.json
@@ -36,5 +36,6 @@
   "Report A Problem": "ابلاغ عن مشكله",
   "Tanta Hub": "طنطا",
   "CANCELLED": "تم الالغاء",
-  "Shipment Details": "تفاصيل الشحنه"
+  "Shipment Details": "تفاصيل الشحنه",
+  "No Items": "لايوجد عناصر"
 }
