--- a/src/locale/ar.json
+++ b/src/locale/ar.json
@@ -37,5 +37,6 @@
   "Tanta Hub": "طنطا",
   "CANCELLED": "تم الالغاء",
   "Shipment Details": "تفاصيل الشحنه",
-  "No Items": "لايوجد عناصر"
+  "No Items": "لايوجد عناصر",
+  "Unknown": "غير معروف"
 }
